--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zwkFb9hG97pwkgfBLj575520m/4ud2uPnMZqk6t+mD0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=jogjacamp
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -50,3 +50,16 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=b7b39db2ff2246
+MAIL_PASSWORD=d0794a89efc51b
+MAIL_ENCRYPTION=null
+
+REDIS_HOST=/var/run/redis/redis-server.sock
+REDIS_CLIENT=predis
+REDIS_PASSWORD=null
+REDIS_PORT=null
+REDIS_SCHEME=unix
